--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,31 @@ body{
         opacity: 0;
     }
 }
+.text-block2 {
+    animation: blinker 1.5s linear infinite;
+    color: #fcf6f8;
+    font-family: sans-serif;
+    font-size: 60px;
+    list-style: none;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
+.blink1 {
+    animation: blinker 1.5s linear infinite;
+    color: #ca3063;
+    font-family: sans-serif;
+    font-size: 60px;
+    list-style: none;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
+
+
+
+
